# SHARP-XE-A207-alt-PC-Link-software

./: .gitignore  README.md  XE-A207.py  pyproject.toml
.github/workflows/: python-package.yml
src/xe_a207/: XE_A207.py  __init__.py
tests/: conftest.py  test_xe_a207.py
