[project]
name = "xe-a207"
version = "0.0.1"
requires-python = ">=3.12"
authors = [
    { name="Benny Christian Henning", email="contact@bennyhenning.de" }
]
description = "An alternative software to the PC-Link for the SHARP XE-A207 cash register"
readme = {file="README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/bchenning/SHARP-XE-A207-alt-PC-Link-software"
Issues = "https://github.com/bchenning/SHARP-XE-A207-alt-PC-Link-software/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]